[gd_scene load_steps=19 format=3 uid="uid://brpqy4qhiln1e"]

[ext_resource type="Script" uid="uid://blpkwgl7l24up" path="res://scripts/sandbag.gd" id="1_o4ioc"]
[ext_resource type="Script" uid="uid://10p7h32suivx" path="res://scripts/HealthComponent.gd" id="2_afc6m"]
[ext_resource type="Resource" uid="uid://boes4h2xqrxia" path="res://source/CharacterStats.tres" id="2_fhy25"]
[ext_resource type="Script" uid="uid://c4he7ebj8yi4x" path="res://scripts/Hurtbox.gd" id="3_fhy25"]
[ext_resource type="Texture2D" uid="uid://d04ssscr75oql" path="res://icon.svg" id="3_t0sp5"]
[ext_resource type="Script" uid="uid://ddcjtv2c3yik5" path="res://scripts/AnimationController.gd" id="4_t0sp5"]
[ext_resource type="Script" uid="uid://8qxdp14d32l" path="res://scripts/Statemachine.gd" id="5_xrd6v"]
[ext_resource type="Script" uid="uid://ebyp3gmnf866" path="res://scripts/sandbag_idle_state.gd" id="6_i5v25"]
[ext_resource type="Script" uid="uid://crmi5rx1t57vh" path="res://scripts/DeathState.gd" id="7_rdj7s"]
[ext_resource type="Script" uid="uid://dhnpjmskawa1x" path="res://scripts/hit_state.gd" id="8_br02o"]
[ext_resource type="PackedScene" uid="uid://cfd5xku7ryjfy" path="res://scence/world_health_bar.tscn" id="11_xrd6v"]

[sub_resource type="Animation" id="Animation_rdj7s"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_t0sp5")]
}

[sub_resource type="Animation" id="Animation_i5v25"]
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_t0sp5")]
}

[sub_resource type="Animation" id="Animation_xrd6v"]
length = 0.2
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_t0sp5")]
}

[sub_resource type="Animation" id="Animation_t0sp5"]
resource_name = "idle "
loop_mode = 1
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:texture")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [ExtResource("3_t0sp5")]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_rdj7s"]
_data = {
&"RESET": SubResource("Animation_rdj7s"),
&"death": SubResource("Animation_i5v25"),
&"hit": SubResource("Animation_xrd6v"),
&"idle": SubResource("Animation_t0sp5")
}

[sub_resource type="CircleShape2D" id="CircleShape2D_o4ioc"]
radius = 6.0

[sub_resource type="CircleShape2D" id="CircleShape2D_sn8ni"]
radius = 14.0

[node name="Sandbag" type="CharacterBody2D"]
position = Vector2(35, 25)
script = ExtResource("1_o4ioc")
stats_resource = ExtResource("2_fhy25")

[node name="Sprite2D" type="Sprite2D" parent="."]
scale = Vector2(0.1, 0.1)
texture = ExtResource("3_t0sp5")

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_rdj7s")
}

[node name="CollisionShape2D" type="CollisionShape2D" parent="."]
shape = SubResource("CircleShape2D_o4ioc")

[node name="HealthComponent" type="Node" parent="."]
script = ExtResource("2_afc6m")

[node name="Hurtbox" type="Area2D" parent="."]
collision_layer = 8
collision_mask = 4
script = ExtResource("3_fhy25")

[node name="CollisionShape2D" type="CollisionShape2D" parent="Hurtbox"]
shape = SubResource("CircleShape2D_sn8ni")

[node name="AnimationController" type="Node" parent="."]
script = ExtResource("4_t0sp5")

[node name="StateMachine" type="Node" parent="."]
script = ExtResource("5_xrd6v")

[node name="Idle" type="Node" parent="StateMachine"]
script = ExtResource("6_i5v25")

[node name="Death" type="Node" parent="StateMachine"]
script = ExtResource("7_rdj7s")

[node name="Hit" type="Node" parent="StateMachine"]
script = ExtResource("8_br02o")

[node name="WorldHealthBar" parent="." instance=ExtResource("11_xrd6v")]

[node name="ProgressBar" parent="WorldHealthBar" index="0"]
anchors_preset = -1
anchor_left = 0.52
anchor_top = 0.791
anchor_right = 0.52
anchor_bottom = 0.791
offset_left = -7.0
offset_top = -12.0
offset_right = 127.0
offset_bottom = 11.0
grow_horizontal = 2
grow_vertical = 0
metadata/_edit_use_anchors_ = true

[editable path="WorldHealthBar"]
